--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "ezy-pharam",
+  "name":"ezy-pharma",
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
     "lint": "expo lint"
@@ -15,40 +15,53 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@expo-google-fonts/adamina": "^0.2.3",
+    "@expo-google-fonts/kadwa": "^0.2.3",
+    "@expo-google-fonts/kreon": "^0.2.3",
+    "@expo-google-fonts/lekton": "^0.2.3",
+    "@expo/cli": "^0.18.30",
     "@expo/vector-icons": "^14.0.2",
-    "@react-navigation/bottom-tabs": "^7.2.0",
-    "@react-navigation/native": "^7.0.14",
-    "expo": "~52.0.25",
-    "expo-blur": "~14.0.2",
-    "expo-constants": "~17.0.4",
-    "expo-font": "~13.0.3",
-    "expo-haptics": "~14.0.1",
-    "expo-linking": "~7.0.4",
-    "expo-router": "~4.0.16",
-    "expo-splash-screen": "~0.29.20",
-    "expo-status-bar": "~2.0.1",
-    "expo-symbols": "~0.2.1",
-    "expo-system-ui": "~4.0.7",
-    "expo-web-browser": "~14.0.2",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-native": "0.76.6",
-    "react-native-gesture-handler": "~2.20.2",
-    "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.4.0",
-    "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5"
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/geolocation": "^3.4.0",
+    "@react-native-vector-icons/fontawesome": "^4.7.0-alpha.25",
+    "@react-navigation/native": "^6.0.2",
+    "axios": "^1.7.7",
+    "expo": "~51.0.28",
+    "expo-constants": "~16.0.2",
+    "expo-font": "~12.0.9",
+    "expo-linking": "~6.3.1",
+    "expo-router": "~3.5.23",
+    "expo-splash-screen": "^0.27.5",
+    "expo-status-bar": "~1.12.1",
+    "expo-system-ui": "~3.0.7",
+    "expo-web-browser": "~13.0.3",
+    "firebase": "^10.14.0",
+    "nativewind": "^2.0.11",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.74.5",
+    "react-native-app-intro-slider": "^4.0.4",
+    "react-native-maps": "1.14.0",
+    "react-native-reanimated": "~3.10.1",
+    "react-native-safe-area-context": "4.10.5",
+    "react-native-screens": "3.31.1",
+    "react-native-step-indicator": "^1.0.3",
+    "react-native-toast-notifications": "^3.4.0",
+    "react-native-vector-icons": "^10.2.0",
+    "react-native-web": "~0.19.10",
+    "zustand": "^5.0.0-rc.2",
+    "@stripe/stripe-react-native": "0.37.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.25.2",
+    "@babel/core": "^7.20.0",
     "@types/jest": "^29.5.12",
-    "@types/react": "~18.3.12",
-    "@types/react-test-renderer": "^18.3.0",
+    "@types/react": "~18.2.45",
+    "@types/react-test-renderer": "^18.0.7",
     "jest": "^29.2.1",
-    "jest-expo": "~52.0.3",
-    "react-test-renderer": "18.3.1",
-    "typescript": "^5.3.3"
+    "jest-expo": "~51.0.3",
+    "react-test-renderer": "18.2.0",
+    "tailwindcss": "3.3.2",
+    "typescript": "~5.3.3"
   },
   "private": true
 }
