--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name":"ezy-pharma",
+  "name": "ezy-pharma",
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
@@ -25,6 +25,7 @@
     "@react-native-community/geolocation": "^3.4.0",
     "@react-native-vector-icons/fontawesome": "^4.7.0-alpha.25",
     "@react-navigation/native": "^6.0.2",
+    "@stripe/stripe-react-native": "0.37.2",
     "axios": "^1.7.7",
     "expo": "~51.0.28",
     "expo-constants": "~16.0.2",
@@ -42,6 +43,7 @@
     "react-native": "0.74.5",
     "react-native-app-intro-slider": "^4.0.4",
     "react-native-maps": "1.14.0",
+    "react-native-radio-buttons-group": "^3.1.0",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
@@ -49,8 +51,7 @@
     "react-native-toast-notifications": "^3.4.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.10",
-    "zustand": "^5.0.0-rc.2",
-    "@stripe/stripe-react-native": "0.37.2"
+    "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
