--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@stripe/stripe-react-native": "0.37.2",
     "axios": "^1.7.7",
     "expo": "~51.0.28",
+    "expo-checkbox": "~3.0.0",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.9",
     "expo-linking": "~6.3.1",
@@ -44,6 +45,7 @@
     "react-native": "0.74.5",
     "react-native-app-intro-slider": "^4.0.4",
     "react-native-maps": "1.14.0",
+    "react-native-modal": "^13.0.1",
     "react-native-radio-buttons-group": "^3.1.0",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
@@ -52,8 +54,7 @@
     "react-native-toast-notifications": "^3.4.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.10",
-    "zustand": "^5.0.0-rc.2",
-    "expo-checkbox": "~3.0.0"
+    "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
